correcciones en verde!

--- a/src/main/resources/informe-LaTex/Qsim.sty
+++ b/src/main/resources/informe-LaTex/Qsim.sty
@@ -6,6 +6,7 @@
 \usepackage{amssymb}
 \usepackage{graphicx}
 \usepackage{hyperref}
+\usepackage{xcolor}
 \usepackage{url}
 
 \newcommand{\tpi}{Tecnicatura Universitaria en Programación Informática}
@@ -14,3 +15,14 @@
 \newcommand{\susi}{Susana Rosito}
 \newcommand{\Q}{QArq}
 \newcommand{\qsim}{QSim}
+
+\newcommand{\IR}{registro IR}
+
+
+\newcommand{\ojo}[2]{{\large\verde{#1}}\footnote{#2}}
+%\newcommand{\ojo}[2]{#2}
+\definecolor{green}{rgb}{0,1,0}
+\definecolor{fucsia}{rgb}{0.6,0,0.5}
+\newcommand{\rojo}[1]{{\color{red}#1}}
+\newcommand{\verde}[1]{{\color{green}#1}}
+\newcommand{\fucsia}[1]{{\color{fucsia}#1}}
