--- a/src/main/resources/informe-LaTex/evaluacion-desarrollo.tex
+++ b/src/main/resources/informe-LaTex/evaluacion-desarrollo.tex
@@ -3,14 +3,14 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%55
 \section{Dificultades encontradas}
 
-\subsection{Dificultades del dominio}
-Las dificultades del dominio estuvieron relacionadas a la comprensión no solamente del modelo de arquitectura Q si no también a su función didactica, ya que el objetivo del simulador no era solamente la implementación del lenguaje si no también el proveer a los alumnos la capacidad de realizar cosas conceptualmente erroneas, por lo que se requeria una comprensión didactica del problema más alla de la teoria de las arquitecturas Q. 
+\subsection{Dificultades presentadas por el dominio}
+Las dificultades del dominio estuvieron relacionadas a la comprensión no solamente del modelo de arquitectura Q si no también a su \ojo{función}{propósito} didáctic\ojo{a}{o}, ya que el objetivo del simulador no \ojo{era solamente la implementación del lenguaje}{es solamente la simulación de la arquitectura y la ejecución de programas,} sino también el proveer a los alumnos la capacidad de \ojo{realizar cosas}{ejercitar situaciones} conceptualmente erróneas, por lo que se requería una comprensión didáctica del problema más allá de la \ojo{teoría}{especificación} de las arquitecturas Q. 
 
 
-\subsection{Disficultades de diseño}
-En primera instacia se opto por implementar un modelo de objetos que utilizaba un objeto de la clase Programa a lo largo de toda la ejecución (procesaba las instrucciones no leyendo de la matriz memoria, si no, pidiendo la siguiente instruccion al objeto instacia de la clase Programa), sobreviviendo asi las distintas etapas una vez que fue creado y evitando la creación de un objeto cuya responsabilidad sea intrepretar el código máquina alojado en la memoria. Luego, al caer en la cuenta de que un programa no sólo podía modificar su entorno al ser ejecutado (otras celdas de memoria que no ocupen su codigo maquina, celdas de puertos, registros, etc) si no que tambien podría sobreescribir su código maquina (ya sea con ese proposito o sólo por un ConcepError), o bien, que el alumno debía tener la posibilidad de seguir ejecutando más allá del código máquina alojado en memoria o más, inevitablemente se opto por refactorear todo el modelo agregando una clase llamada Interprete cuya responsabilidad es interpretar la siguiente instrucción alojada en memoria para que luego sea ejecutada y descartando el objeto instacia de Programa una vez que este es cargado en memoria con exito.
+\subsection{Dificultades de diseño}
+En primera instancia se opto por implementar un modelo de objetos que utilizaba un objeto de la clase \textbf{Programa} a lo largo de toda la ejecución \ojo{(procesaba las instrucciones no leyendo de la matriz memoria, si no, pidiendo la siguiente instrucción al objeto instancia de la clase Programa), sobreviviendo así las distintas etapas una vez que fue creado y evitando la creación de un objeto cuya responsabilidad sea interpretar el código máquina alojado en la memoria}{(sacar los paréntesis y detallar mas)}. Luego\ojo{, al caer en la cuenta de}{entendimos} que un programa no sólo podía modificar su entorno al ser ejecutado (otras celdas de memoria que no ocupen su código maquina, celdas de puertos, registros, etc) si no que también podría sobreescribir su código maquina (ya sea con ese propósito o sólo por un \ojo{ConcepError}{error conceptual}), o bien, que el alumno debía tener la posibilidad de seguir ejecutando más allá del código máquina alojado en memoria o más, inevitablemente se \ojo{opto por refactorear todo el}{necesitó corregir gran parte del} modelo agregando una clase denominada \textbf{Intérprete}, cuya responsabilidad es interpretar la siguiente instrucción alojada en memoria para que luego sea ejecutada, y descartando el objeto instancia de \textbf{Programa} una vez que éste es cargado en memoria con éxito.\\
 
-Tuvieron que ser solicitadas además extenciones al equipo de desarrolladores de Arena para poder realizar la interfaz con dicho framework.
+\ojo{Tuvieron que ser solicitadas además extensiones al equipo de desarrolladores de Arena para poder realizar la interfaz con dicho framework.}{(detallar)}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%55
 \section{Casos de prueba}
