--- a/src/main/resources/informe-LaTex/simulador.tex
+++ b/src/main/resources/informe-LaTex/simulador.tex
@@ -65,7 +65,7 @@ En la decodificación el Interprete\ojo{,se encarga de tomar lo que se encuentra
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%5
-\section{Implementación del simulador}
+\section{Implementación}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsection{Tecnología utilizada}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
